ephemeral-cluster/manifests/istio-gateway.tmpl.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: ${GATEWAY_NAMESPACE}
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers:
    - hosts:
        - "*"
      port:
        name: http2
        number: 80
        protocol: HTTP
