ephemeral-cluster/manifests/k8s-gateway.tmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vcluster-istio
  namespace: ${GATEWAY_NAMESPACE}
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
