ephemeral-cluster/manifests/istio-http-route.tmpl.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-${SERVICE_NAME}
  namespace: ${NAMESPACE}
spec:
  gateways:
    - ${GATEWAY_NAMESPACE}/istio-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: ${BASE_PATH}
      route:
        - destination:
            host: ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local
            port:
              number: ${SERVICE_PORT}
