ephemeral-cluster/manifests/kong-http-route.tmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vcluster-dashboard
  namespace: ${NAMESPACE}
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - name: kong
      namespace: ${GATEWAY_NAMESPACE}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ${BASE_PATH}
      backendRefs:
        - name: ${SERVICE_NAME}
          port: ${SERVICE_PORT}
